# voca_rs

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  LICENSE.md  README.md  index.html  search-index.js  settings.html  source-files.js
implementors/voca_rs/: trait.Voca.js
src/: case.rs  chop.rs  count.rs  escape.rs  index.rs  lib.rs  manipulate.rs  query.rs  split.rs  strip.rs  utils.rs
src/stfu8/: decode.rs.html  encode_u16.rs.html  encode_u8.rs.html  helpers.rs.html  lib.rs.html
src/unicode_segmentation/: grapheme.rs.html  lib.rs.html  sentence.rs.html  tables.rs.html  word.rs.html
src/voca_rs/: case.rs.html  chop.rs.html  count.rs.html  escape.rs.html  index.rs.html  lib.rs.html  manipulate.rs.html  query.rs.html  split.rs.html  strip.rs.html
stfu8/: all.html  enum.DecodeErrorKind.html  fn.decode_u16.html  fn.decode_u8.html  fn.encode_u16.html  fn.encode_u16_pretty.html  fn.encode_u8.html  fn.encode_u8_pretty.html  index.html  sidebar-items.js  struct.DecodeError.html
stfu8/decode/: enum.DecodeErrorKind.html  struct.DecodeError.html
tests/: lib.rs
tests/unit/: case.rs  chop.rs  count.rs  escape.rs  impl_test.rs  index.rs  manipulate.rs  query.rs  readme.rs  split.rs  strip.rs  utils.rs
voca_rs/: all.html  index.html  sidebar-items.js  trait.Voca.html
voca_rs/case/: fn.camel_case.html  fn.capitalize.html  fn.decapitalize.html  fn.kebab_case.html  fn.lower_case.html  fn.lower_first.html  fn.pascal_case.html  fn.shouty_kebab_case.html  fn.shouty_snake_case.html  fn.snake_case.html  fn.swap_case.html  fn.title_case.html  fn.train_case.html  fn.upper_case.html  fn.upper_first.html  index.html  sidebar-items.js
voca_rs/chop/: fn.char_at.html  fn.code_point_at.html  fn.first.html  fn.foreign_key.html  fn.grapheme_at.html  fn.last.html  fn.max.html  fn.min.html  fn.prune.html  fn.slice.html  fn.substr.html  fn.substring.html  fn.truncate.html  index.html  sidebar-items.js
voca_rs/count/: fn.count.html  fn.count_graphemes.html  fn.count_substrings.html  fn.count_unique_words.html  fn.count_where.html  fn.count_words.html  index.html  sidebar-items.js
voca_rs/escape/: fn.escape_html.html  fn.escape_regexp.html  fn.unescape_html.html  index.html  sidebar-items.js
voca_rs/index/: fn.index_all.html  fn.index_of.html  fn.last_index_of.html  fn.search.html  index.html  sidebar-items.js
voca_rs/manipulate/: fn.expand_spaces.html  fn.expand_tabs.html  fn.insert.html  fn.latinise.html  fn.pad.html  fn.pad_left.html  fn.pad_right.html  fn.repeat.html  fn.replace.html  fn.replace_all.html  fn.reverse.html  fn.reverse_grapheme.html  fn.slugify.html  fn.splice.html  (+8 more)
(+83 files in other folders)
